--- a/rails/app/views/layouts/application.html.erb
+++ b/rails/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <%# 사이트 : https://fontawesome.com/icons %>
     
+    
     <%# 폰트 %>
     <style>
   	/* 나눔 손글씨 */
@@ -64,13 +65,13 @@
   <header id="header">
     <div class="container-fluid">
       <div id="logo" class="pull-left">
-        <h1><a href="/" class="scrollto">홈페이지</a></h1>
+        <h1><a href="/" class="scrollto">Logo</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>-->
       </div>
     
       <nav id="nav-menu-container">
-        <ul class="nav-menu" style="margin-right: 100px;">
+        <ul class="nav-menu" style="margin-right: 10px; padding: 0;">
           <div class="d-md-none" style="background-color: rgba(0, 255, 100, 0.32); width: 165%">
             <% if user_signed_in? %>
               <li class="d-md-none menu-has-children"><span style="color: white;"><a><%= content_tag(:span, " #{current_user.nickname.truncate(10, omission: '...')}", class: "fas fa-id-card") %></a></span>
@@ -98,21 +99,13 @@
                 <li class="d-md-none"><a><i class="fas fa-bell"></i> 0</a></li>
               <% end %>
             <% else %>
-              <li class="d-md-none"><%= link_to "로그인", new_user_session_path, style: "color: #18d26e" %></li>
-              <li class="d-md-none"><%= link_to "회원가입", new_user_registration_path, style: "color: #18d26e" %></li>
+              <!--로그인 이후에 표시되므로, empty  -->
             <% end %>
           </div>
-          <li><a href="/all_notices">공지사항</a></li>
-          <li class="menu-has-children"><span style="color: white;"><a>게시판</a></span>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
-            </ul>
-          </li>
-          <li><a href="#services">질문답변</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <i class="fa fa-bars fa-2x header-menu"></i>
+          <div class="header-menu-content"></div>
+          <!--<li><a href="/all_notices">공지사항</a></li>-->
+          <!--<li><a href="/#">히스토리</a></li>-->
           <% if user_signed_in? %>
             <% if current_user.new_notifications.unread_by(current_user).count > 0 %>
               <li class="d-none d-md-block menu-has-children"><span style="color: yellow;"><a><i class="fas fa-bell"></i> <%= current_user.new_notifications.unread_by(current_user).count %></a></span>
@@ -139,8 +132,7 @@
             </ul>
           </li>
           <% else %>
-            <li class="d-none d-md-block"><%= link_to "로그인", new_user_session_path, style: "color: #18d26e" %></li>
-            <li class="d-none d-md-block"><%= link_to "회원가입", new_user_registration_path, style: "color: #18d26e" %></li>
+            <!--로그인 이후에 표시되므로, empty  -->
           <% end %>
         </ul>
       </nav><!-- #nav-menu-container -->
