DB : Subscribe - Post relation 설정 완료

--- a/rails/app/views/crawl_lists/show.html.erb
+++ b/rails/app/views/crawl_lists/show.html.erb
@@ -10,5 +10,5 @@
   <%= @crawl_list.is_message_send %>
 </p>
 
-<%= link_to 'Edit', edit_crawl_list_path(@crawl_list) %> |
-<%= link_to 'Back', crawl_lists_path %>
+<%#= link_to 'Edit', edit_crawl_list_path(@crawl_list) %> |
+<%#= link_to 'Back', crawl_lists_path %>
