fix/로그인 버튼 height 간격 수정 (디자이너 요청)

--- a/rails/app/assets/stylesheets/login/login.css
+++ b/rails/app/assets/stylesheets/login/login.css
@@ -3,6 +3,7 @@
     position: relative;
     min-width: 100%;
     margin: auto;
+    margin-top: 5px;
     width: 100%;
     max-width: 280px;
 }
@@ -902,6 +903,7 @@ div.login_box {
 }
 
 .login-btn {
+    height: 40px;
     border: 0;
     width: 100%;
     background-color: #ff4555;
