--- a/rails/app/views/homes/index.html.erb
+++ b/rails/app/views/homes/index.html.erb
@@ -1,6 +1,16 @@
-<main class="container">
-    <div id="search-wrap">
-        <input type="text" class="search-input-text" placeholder="알림을 받고싶은 키워드를 입력하세요" />
-        <i class="fas fa-search fa-3x search-icon"></i>
-    </div>
+<main class="container" id="main">
+    <section class="search-section">
+        <h1 class="search-section-title">이제, 즐겨찾기 말고</h1>
+        <h2 class="search-section-subtitle">야! 떳다</h2>
+        
+        <div class="search-wrap">
+            <input type="text" class="search-input-text" placeholder="어떤 사이트를 찾으시나요?" />
+            <object type="image/svg+xml" data="/images/meg.svg" width="35" height="35"></object>
+        </div>
+    </section>
+    <nav class="user-sidebar">
+        <div class="user-sidebar-content">
+            
+        </div>
+    </nav>
 </main>
