--- a/rails/app/assets/stylesheets/application.scss
+++ b/rails/app/assets/stylesheets/application.scss
@@ -325,12 +325,23 @@ main#main {
     width: 1100px;
     max-width: 70vw;
     
+    .search-btn {
+      transition: all 0.2s ease-in-out;
+      margin-right: 10px;
+      cursor: pointer;
+    }
+    
+    .search-btn:hover {
+      filter: brightness(60%);
+    }
+    
     .search-section-title {
       position: absolute;
       top: 27%;
       left: 11%;
       color: black;
       font-family: 'S-CoreDream-2ExtraLight';
+      font-size: 2.5rem;
     }
   
     .search-section-subtitle {
@@ -341,6 +352,7 @@ main#main {
       color: black;
       width: auto;
       min-width: 300px;
+      font-size: 2.5rem;
     }
     
     .search-wrap {
@@ -373,11 +385,195 @@ main#main {
     background-repeat: no-repeat;
     
     .user-sidebar-content {
-      position: absolute;
+      position: relative;
       width: 260px;
       height: 100vh;
-      right: 0;
+      margin-left: auto;
       background-color: rgba(0, 0, 0, 0.5);
+    }
+    
+    .text-logo {
+      position: absolute;
+      top: 34px;
+      left: 33px;
+    }
+    
+    .user-img {
+      position: absolute;
+      top: 147px;
+      left: 34px;
+      background-color: white;
+      border-radius: 100%;
+    }
+    
+    .user-name {
+      color: white;
+      font-family: 'S-CoreDream-4Regular';
+      position: absolute;
+      top: 150px;
+      left: 74px;
+      font-size: 17px;
+    }
+    
+    .user-logout {
+      color: white;
+      position: absolute;
+      top: 154px;
+      right: 36px;
+      font-size: 12px;
+      transition: all 0.2s ease-in-out;
+    }
+    
+    .user-logout:hover {
+      transform: scale(1.2);
+      color: cornflowerblue;
+      text-decoration: none;
+    }
+    
+    .history-category-wrap {
+      position: relative;
+      top: 200px;
+      left: 0;
+      width: 100%;
+      height: calc(100% - 200px);
+    }
+    
+    .user-history {
+      display: flex;
+      color: white;
+      font-family: 'S-CoreDream-4Regular';
+      position: relative;
+      top: 10px;
+      left: 0;
+      width: 100%;
+      font-size: 17px;
+      height: 50px;
+      padding-left: 49px;
+      align-items: center;
+      border-top: 1px solid hsla(0, 0%, 80%, 1);
+      border-bottom: 1px solid hsla(0, 0%, 80%, 1);
+      user-select: none;
+    }
+    
+    .user-history:hover {
+      background-color: hsla(0, 0%, 100%, 0.2);
+    }
+    
+    .history-list {
+      position: relative;
+      top: 34px;
+      left: 0;
+      width: 100%;
+      font-family: 'S-CoreDream-1Thin';
+      color: white;
+      list-style: none;
+      max-height: 100px;
+      overflow: hidden;
+      margin: 0;
+      transition: all 0.2s ease-in-out;
+    }
+    
+    .history-list li, .history-list li a {
+      color: white;
+      height: 20px;
+      margin-bottom: 5px;
+      transition: all 0.2s ease-in-out;
+      font-size: 15px;
+    }
+    
+    .history-list li a:hover {
+      text-decoration: none;
+      color: cornflowerblue;
+      cursor: pointer;
+    }
+    
+    .history-list.active {
+      max-height: none;
+      height: calc(100% - 240px);
+      overflow: scroll;
+      transition: all 0.2s ease-in-out;
+    }
+    
+    .history-more {
+      color: white;
+      display: block;
+      position: relative;
+      top: 40px;
+      text-align: right;
+      padding-right: 36px;
+      left: 0;
+      width: 100%;
+      font-size: 12px;
+      font-family: 'S-CoreDream-1Thin';
+      transition: all 0.2s ease-in-out;
+      width: fit-content;
+      margin-left: auto;
+      user-select: none;
+    }
+    
+    .history-more:hover {
+      text-decoration: none;
+      color: cornflowerblue;
+      cursor: pointer;
+    }
+    
+    .user-alarm {
+      display: flex;
+      color: white;
+      font-family: 'S-CoreDream-4Regular';
+      position: relative;
+      top: 60px;
+      left: 0;
+      width: 100%;
+      font-size: 17px;
+      height: 50px;
+      padding-left: 49px;
+      align-items: center;
+      border-top: 1px solid hsla(0, 0%, 80%, 1);
+      border-bottom: 1px solid hsla(0, 0%, 80%, 1);
+      user-select: none;
+      transition: all 0.2s ease-in-out;
+    }
+    
+    .alarm-number {
+      min-width: 22px;
+      justify-content: center;
+      background-color: white;
+      border-radius: 10px;
+      margin-left: 10px;
+      padding-right: 5px;
+      padding-left: 5px;
+      width: fit-content;
+      height: 20px;
+      align-items: center;
+      display: flex;
+      color: red;
+      font-weight: bold;
+      font-family: 'Noto Sans KR', sans-serif;
+      font-size: 10px;
+      text-align: center;
+    }
+    
+    .user-notice {
+      display: flex;
+      color: white;
+      font-family: 'S-CoreDream-4Regular';
+      position: relative;
+      top: 60px;
+      left: 0;
+      width: 100%;
+      font-size: 17px;
+      height: 50px;
+      padding-left: 49px;
+      align-items: center;
+      border-bottom: 1px solid hsla(0, 0%, 80%, 1);
+      user-select: none;
+      transition: all 0.2s ease-in-out;
+    }
+    
+    .user-alarm:hover, .user-notice:hover {
+      background-color: hsla(0, 0%, 100%, 0.2);
+      cursor: pointer;
     }
   }
   
