--- a/rails/app/views/homes/index.html.erb
+++ b/rails/app/views/homes/index.html.erb
@@ -1,7 +1,10 @@
 <main class="container" id="main">
     <section class="search-section">
-        <h1 class="search-section-title">이제, 즐겨찾기 말고</h1>
-        <h2 class="search-section-subtitle">야! 떳다</h2>
+        <h1 class="search-section-title">
+            이제, 즐겨찾기 말고
+            <br/>
+            <strong class="search-section-subtitle">야! 떳다</strong>
+        </h1>
         
         <div class="search-wrap">
             <input type="text" class="search-input-text" placeholder="어떤 사이트를 찾으시나요?" />
@@ -14,10 +17,12 @@
             
             <img class="user-img" src="/images/user.svg" width="30" height="30" />
             <%= content_tag(:span, " #{current_user.nickname.truncate(10, omission: '...')}", class: "user-name") %>
+            <%= link_to " ", edit_user_registration_path(current_user.id), class: "user-edit" %>
+            
             <%= link_to "로그아웃", destroy_user_session_path, method: "DELETE", class: "user-logout" %>
             
             <div class="history-category-wrap">
-                <div class="user-history">히스토리</div>
+                <div class="user-history">히스토리<a class="history-more">더보기</a></div>
                 <ul class="history-list">
                     <li class="history-item"><a href="#">국민대학교 | 취창업</a></li>
                     <li class="history-item"><a>국민대학교 | 취창업</a></li>
@@ -33,9 +38,8 @@
                     <li class="history-item"><a>국민대학교 | 취창업</a></li>
                     <li class="history-item"><a>국민대학교 | 취창업</a></li>
                 </ul>
-                <a class="history-more">더보기</a>
-                <div class="user-alarm"><a>알림</a><span class="alarm-number">0</span></div>
-                <div class="user-notice"><a>공지사항</a></div>
+                <!--<div class="user-alarm"><a>알림</a><span class="alarm-number">0</span></div>-->
+                <!--<div class="user-notice"><a>공지사항</a></div>-->
             </div>
         </div>
     </nav>
