fix/로그아웃 라우팅 안되던 문제 해결

--- a/rails/app/views/homes/index.html.erb
+++ b/rails/app/views/homes/index.html.erb
@@ -16,10 +16,11 @@
             <img class="text-logo" src="/images/text-logo.svg" width="80" height="20" />
             
             <img class="user-img" src="/images/user.svg" width="30" height="30" />
-            <%= content_tag(:span, " #{current_user.nickname.truncate(10, omission: '...')}", class: "user-name") %>
-            <%= link_to " ", edit_user_registration_path(current_user.id), class: "user-edit" %>
-            
-            <%= link_to "로그아웃", destroy_user_session_path, method: "DELETE", class: "user-logout" %>
+            <% if user_signed_in? %>
+                <%= content_tag(:span, " #{current_user.nickname.truncate(10, omission: '...')}", class: "user-name") %>
+                <%= link_to " ", edit_user_registration_path(current_user.id), class: "user-edit" %>
+                <%= link_to "로그아웃", destroy_user_session_path, method: "DELETE", class: "user-logout" %>
+            <% end %>
             
             <div class="history-category-wrap">
                 <div class="user-history">히스토리<a class="history-more">더보기</a></div>
