--- a/rails/app/assets/stylesheets/login/login.css
+++ b/rails/app/assets/stylesheets/login/login.css
@@ -1,15 +1,17 @@
 /* Input Form 1 */
 .form_1 {
     position: relative;
+    min-width: 100%;
     margin: auto;
+    margin-top: 5px;
     width: 100%;
     max-width: 280px;
 }
 
 .form_1 .label {
     position: absolute;
-    top: 16px;
-    left: 0;
+    top: 21px;
+    left: 15px;
     font-size: 16px;
     color: #9098a9;
     font-weight: 500;
@@ -72,6 +74,7 @@
 /* Input Form 2 */
 .form_2 {
     position: relative;
+    min-width: 100%;
     margin: auto;
     width: 100%;
     max-width: 280px;
@@ -79,8 +82,8 @@
 
 .form_2 .label {
     position: absolute;
-    top: 16px;
-    left: 0;
+    top: 21px;
+    left: 15px;
     font-size: 16px;
     color: #9098a9;
     font-weight: 500;
@@ -847,4 +850,180 @@
 
 .form_12 input:focus + span + .border {
     transform: scaleX(1);
+}
+
+.login-container {
+    display: grid;
+    grid-template-columns: auto minmax(300px, 30vw);
+    grid-template-areas: 
+      "intro login";
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    min-width: 100vw;
+    height: 100vh;
+}
+
+.login_box, .shared-info {
+    grid-area: login;
+    margin: 0;
+}
+
+div.login_box {
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.shared-info {
+    width: 100%;
+    margin-top: 5px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 20px;
+}
+
+.input-login {
+    padding: 0;
+    height: fit-content;
+}
+
+.field {
+    margin: 0 30px;
+    font-family: 'S-CoreDream-1Thin';
+}
+
+.input-password {
+    margin-top: 0px;
+}
+
+.login-btn-wrap {
+    margin: 0 30px;
+}
+
+.login-btn {
+    height: 40px;
+    border: 0;
+    width: 100%;
+    background-color: #ff4555;
+}
+
+.login-btn:hover {
+    background-color: hsl(355, 100%, 44%);
+    outline: none;
+}
+
+.login-btn:active, .login-btn:focus {
+    background-color: hsl(355, 100%, 44%) !important;
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+.app-info {
+    position: relative;
+    background-image: url("/images/info-img.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.app-info .info-title {
+    position: absolute;
+    top: 29%;
+    left: 21%;
+    font-family: 'S-CoreDream-2ExtraLight';
+    font-size: 4rem;
+    color: white;
+}
+
+.info-sub-title {
+    color: white;
+    left: 21%;
+    top: 44%;
+    position: absolute;
+    font-family: 'S-CoreDream-2ExtraLight';
+    font-size: 1.3rem;
+    margin-right: 10px;
+    line-height: 160%;
+    word-break: keep-all;
+    margin-right: 70px;
+}
+
+.info-h3 {
+    text-align: right;
+    font-size: 1em;
+    font-family: 'S-CoreDream-1Thin';
+    margin-right: 30px;
+}
+
+.input-email-wrap, .input-password-wrap {
+    padding: 0 30px;
+}
+
+input.type-email {
+    width: 100%;
+    margin-top: 0;
+    border: solid 1px rgba(24, 24, 24, 0.2);
+    padding-left: 10px;
+    height: 40px;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size: 12px;
+}
+
+input.type-password {
+    width: 100%;
+    margin-top: 10px;
+    border: solid 1px rgba(24, 24, 24, 0.2);
+    padding-left: 10px;
+    height: 40px;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size: 12px;
+}
+
+.label-remember {
+    margin: 0;
+    font-size: 12px;
+    vertical-align: text-top;
+    font-family: 'Noto Sans KR Thin', sans-serif;
+    color: #181818;
+}
+
+.login-hr {
+    margin: 0 30px 10px 30px;
+}
+
+.search-password {
+    font-family: 'Noto Sans KR Thin', sans-serif;
+    font-size: 12px;
+    float: left;
+}
+
+.sign-up {
+    font-family: 'Noto Sans KR Thin', sans-serif;
+    font-size: 12px;
+    float: right;
+}
+
+.login-checkbox {
+    /*display: none;*/
+}
+
+.login-check-label {
+    width: 100%;
+    height: 20px;
+}
+
+.check-img {
+    padding: 0 0 0 13px;
+    background: url(/images/btn-check.svg) no-repeat;
+    cursor: pointer;
+    width: 100vw;
+    background-position: -247px -517px;
+    background-size: 720px;
+    height: 100vh;
+}
+
+#login-checkbox:checked + .check-img {
+    background:url("/images/btn-check-off.svg") no-repeat;
 }
