구독기능 추가

--- a/rails/app/assets/stylesheets/application.scss
+++ b/rails/app/assets/stylesheets/application.scss
@@ -74,7 +74,17 @@
     height: 40px;
     text-align: center;
     line-height: 40px;
-    margin-top: 43px;
+    //margin-top: 43px;
+  }
+  
+  .subscribe_off {
+    background-color: white;
+    color: #fb2626;
+    border: 2px solid #fb2626;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    //margin-top: 43px;
   }
   
   .text-none:hover
